# pkg-warner

./: .env  .gitignore  Cargo.toml  PKGBUILD  README.md  flake.nix  justfile
src/: args.rs  main.rs
src/internal/: mod.rs  strings.rs  structs.rs
